--- a/examples/webgl_interactive_draggablecubes.html
+++ b/examples/webgl_interactive_draggablecubes.html
@@ -66,13 +66,13 @@
 
 				var geometry = new THREE.BoxGeometry( 40, 40, 40 );
 
-				for ( var i = 0; i < 10; i ++ ) {
+				for ( var i = 0; i < 16; i ++ ) {
 
-					var object = new THREE.Mesh( geometry, new THREE.MeshLambertMaterial( { color: Math.random() * 0xffffff } ) );
+					var object = new THREE.Mesh( geometry, new THREE.MeshLambertMaterial( { color: 5 * 0xffffff } ) );
 
 					object.position.x = Math.random() * 1000 - 500;
 					object.position.y = Math.random() * 600 - 300;
-					object.position.z = Math.random() * 800 - 400;
+					// object.position.z = Math.random() * 800 - 400;
 
 					// object.rotation.x = Math.random() * 2 * Math.PI;
 					// object.rotation.y = Math.random() * 2 * Math.PI;
